syntax = "proto3";

package com.coralogix.datausage.v2;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message Team {
  google.protobuf.UInt64Value id = 2;
}

message DateRange {
  google.protobuf.Timestamp from_date = 1;
  google.protobuf.Timestamp to_date = 2;
}

enum Pillar {
  PILLAR_UNSPECIFIED = 0;
  PILLAR_METRICS = 1;
  PILLAR_LOGS = 2;
  PILLAR_SPANS = 3;
  PILLAR_BINARY = 4;
}

enum TcoTier {
  option deprecated = true;
  TCO_TIER_UNSPECIFIED = 0;
  TCO_TIER_LOW = 1;
  TCO_TIER_MEDIUM = 2;
  TCO_TIER_HIGH = 3;
  TCO_TIER_BLOCKED = 4;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_MEDIUM = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_BLOCKED = 4;
}

enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  SEVERITY_DEBUG = 1;
  SEVERITY_VERBOSE = 2;
  SEVERITY_INFO = 3;
  SEVERITY_WARNING = 4;
  SEVERITY_ERROR = 5;
  SEVERITY_CRITICAL = 6;
}

message GenericDimension{
  string key = 1;
  string value = 2;
}

message Dimension{
  oneof dimension {
    Pillar pillar = 1;
    GenericDimension generic_dimension = 2;
    TcoTier tier = 3 [deprecated = true];
    Severity severity = 4;
    Priority priority = 5;
  }
}